apps/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: wil42-deployment
    namespace: dev
spec:
    selector:
        app: wil42
    ports:
        - port: 8888
          targetPort: 8888
    type: NodePort
